--- a/produccts.html
+++ b/produccts.html
@@ -35,9 +35,11 @@
 
         <section class="search">
             <h2>Mahsulotlar</h2>
-            <div class="search-wrapper">
-                <input type="search" placeholder="Qidiruv...">
-                <button type="search-button">Qidiruv</button>
+            <input type="search" id="searchInput" placeholder="Qidiruv...">
+            <button class="search-button" onclick="search()">Qidiruv</button>
+          
+            <div id="searchResults">
+              <ul id="resultsList"></ul>
             </div>
         </section>
 
@@ -46,23 +48,23 @@
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
+                    <a href="#"><img src="img/Gucci.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Gucci Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
+                    <a href="#"><img src="img/Tigr.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tigr Narxi:230 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
+                    <a href="#"><img src="img/Atirgul.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Atirgul Narxi:180 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
+                    <a href="#"><img src="img/Sariq yurak.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Yurak Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
 
@@ -72,23 +74,23 @@
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
+                    <a href="#"><img src="img/Romashka.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Romashka Narxi:200 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
+                    <a href="#"><img src="img/Kapalak.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Kapalak Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
+                    <a href="#"><img src="img/Louis vuitton.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Louis Vuitton Narxi:230 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
+                    <a href="#"><img src="img/ko'k.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Ko'k Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
             </section>
@@ -149,6 +151,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/search.js"></script>
 
 </body>
 </html>
